What's New in Python 2.2a4?
===========================

Core

- file.writelines() now accepts any iterable object producing strings.

- PyUnicode_FromEncodedObject() now works very much like
  PyObject_Str(obj) in that it tries to use __str__/tp_str
  on the object if the object is not a string or buffer. This
  makes unicode() behave like str() when applied to non-string/buffer
  objects.

- PyFile_WriteObject now passes Unicode object to the file's write
  method. As a result, all file-like object which may be the target
  of a print statement must support Unicode objects, i.e. they must
  at least convert them into ASCII strings.

- The builtin file type can be subclassed now.  In the usual pattern,
  "file" is the name of the builtin type, and file() is a new builtin
  constructor, with the same signature as the builtin open() function.
  file() is now the preferred way to open a file.

- In 2.2a3, *for new-style classes only*, __getattr__ was called for
  every attribute access.  This was confusing because it differed
  significantly from the behavior of classic classes, where it was
  only called for missing attributes.  Now, __getattr__ is called only
  if regular attribute access raises AttributeError; to catch *all*
  attribute access, *for new-style classes only*, you can use
  __getattribute__.  If both are defined, __getattribute__ is called
  first, and if it raises AttributeError, __getattr__ is called.

- In 2.2a3, __new__ would only see sequential arguments passed to the
  type in a constructor call; __init__ would see both sequential and
  keyword arguments.  This made no sense whatsoever any more, so
  now both __new__ and __init__ see all arguments.

- In 2.2a3, hash() applied to an instance of a subclass of str or unicode
  always returned 0.  This has been repaired.

- In 2.2a3, an operation on an instance of a subclass of an immutable type
  (int, long, float, complex, tuple, str, unicode), where the subtype